--- a/mmo.html
+++ b/mmo.html
@@ -27,7 +27,7 @@
   <!-- Add your site or application content here -->
     <h1 class="mid">MMORPG</h1>
     <div class="flex-container">
-        <img src="img/mmo.jpgz" alt="image of a scene in a mmo game" class="half-width">
+        <img src="img/mmo.jpg" alt="image of a scene in a mmo game" class="half-width">
         <div class="half-width">
             <p>A massively multiplayer online role-playing game (MMORPG) is a video game that combines aspects of a role-playing video game and a massively multiplayer online game.</p>
 
